testsuite/tests/rename/should_fail/T2993.stderr

T2993.hs:7:13: error:
    Variable not in scope: (<**>) :: t -> (a -> a) -> t1
    Suggested fix: Perhaps use ‘<*>’ (imported from Prelude)
